--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,86 @@
+absl-py==1.2.0
+astunparse==1.6.3
+attrs==21.4.0
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+cycler==0.11.0
+dataclasses==0.6
+docker-pycreds==0.4.0
+eli5==0.13.0
+flatbuffers==1.12
+fonttools==4.34.4
+gast==0.4.0
+gitdb==4.0.9
+GitPython==3.1.27
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphviz==0.20.1
+grpcio==1.47.0
+h5py==3.7.0
+idna==3.3
+imageio==2.20.0
+Jinja2==3.1.2
 joblib==1.1.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==14.0.1
+lime==0.2.0.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+networkx==2.8.5
+nltk==3.7
+nlu==4.0.0
 numpy==1.22.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
+packaging==21.3
 pandas==1.4.2
+pathtools==0.1.2
+Pillow==9.2.0
+promise==2.3
+protobuf==3.19.4
+psutil==5.9.1
+pyarrow==8.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
+PyWavelets==1.3.0
+PyYAML==6.0
+regex==2022.7.25
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-image==0.19.3
 scikit-learn==1.0.2
 scipy==1.8.0
+sentry-sdk==1.8.0
+setproctitle==1.3.0
+shortuuid==1.0.9
 six==1.16.0
 sklearn==0.0
+smmap==5.0.0
+spark-nlp==4.0.2
+tabulate==0.8.10
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
 threadpoolctl==3.1.0
+tifffile==2022.5.4
+torch==1.12.0
+tqdm==4.64.0
+typing_extensions==4.3.0
+urllib3==1.26.11
+wandb==0.12.21
+Werkzeug==2.2.0
+wrapt==1.14.1
